Closed Bug 1974197 Opened 11 months ago Closed 11 months ago

Crash after setting location.href multiple times

Categories

(Core :: DOM: Navigation, defect)

defect

Tracking

()

RESOLVED FIXED
142 Branch
Tracking Status
firefox142 --- fixed

People

(Reporter: farre, Assigned: farre)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

No description provided.
Assignee: nobody → afarre
Status: NEW → ASSIGNED
Severity: -- → S3
Status: ASSIGNED → RESOLVED
Closed: 11 months ago
Resolution: --- → FIXED
Target Milestone: --- → 142 Branch
QA Whiteboard: [qa-triage-done-c143/b142]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: