Bug 1974197 - Abort ongoing navigate events when setting location.href. r=jjaschke

Differential Revision: https://phabricator.services.mozilla.com/D255105